LDEV-4691 Update source code of 3rd party libraries