@@ -6,9 +6,11 @@ import java.math.BigInteger;
 import java.util.HashSet;
 
 import com.fasterxml.jackson.core.*;
+import com.fasterxml.jackson.core.io.NumberInput;
 import com.fasterxml.jackson.databind.*;
 import com.fasterxml.jackson.databind.annotation.JacksonStdImpl;
 import com.fasterxml.jackson.databind.jsontype.TypeDeserializer;
+import com.fasterxml.jackson.databind.util.AccessPattern;
 
 /**
  * Container class for deserializers that handle core JDK primitive
@@ -120,41 +122,47 @@ public class NumberDeserializers
         private static final long serialVersionUID = 1L;
 
         protected final T _nullValue;
+
+        // @since 2.9
+        protected final T _emptyValue;
+
         protected final boolean _primitive;
 
-        protected PrimitiveOrWrapperDeserializer(Class<T> vc, T nvl) {
+        protected PrimitiveOrWrapperDeserializer(Class<T> vc, T nvl, T empty) {
             super(vc);
             _nullValue = nvl;
+            _emptyValue = empty;
             _primitive = vc.isPrimitive();
         }
 
         @Override
-        public final T getNullValue(DeserializationContext ctxt) throws JsonMappingException
-        {
+        public AccessPattern getNullAccessPattern() {
+            // 02-Feb-2017, tatu: For primitives we must dynamically check (and possibly throw
+            //     exception); for wrappers not.
+            if (_primitive) {
+                return AccessPattern.DYNAMIC;
+            }
+            if (_nullValue == null) {
+                return AccessPattern.ALWAYS_NULL;
+            }
+            return AccessPattern.CONSTANT;
+        }
+
+        @Override
+        public final T getNullValue(DeserializationContext ctxt) throws JsonMappingException {
+            // 01-Mar-2017, tatu: Alas, not all paths lead to `_coerceNull()`, as `SettableBeanProperty`
+            //    short-circuits `null` handling. Hence need this check as well.
             if (_primitive && ctxt.isEnabled(DeserializationFeature.FAIL_ON_NULL_FOR_PRIMITIVES)) {
-                throw ctxt.mappingException(
-                        "Can not map JSON null into type %s (set DeserializationConfig.DeserializationFeature.FAIL_ON_NULL_FOR_PRIMITIVES to 'false' to allow)",
+                ctxt.reportInputMismatch(this,
+                        "Cannot map `null` into type %s (set DeserializationConfig.DeserializationFeature.FAIL_ON_NULL_FOR_PRIMITIVES to 'false' to allow)",
                         handledType().toString());
             }
             return _nullValue;
         }
 
         @Override
-        @Deprecated // remove in 2.7
-        public final T getNullValue() {
-            return _nullValue;
-        }
-
-        @Override
-        public T getEmptyValue(DeserializationContext ctxt) throws JsonMappingException {
-            // [databind#1095]: Should not allow coercion from into null from Empty String
-            // either, if `null` not allowed
-            if (_primitive && ctxt.isEnabled(DeserializationFeature.FAIL_ON_NULL_FOR_PRIMITIVES)) {
-                throw ctxt.mappingException(
-                        "Can not map Empty String as null into type %s (set DeserializationConfig.DeserializationFeature.FAIL_ON_NULL_FOR_PRIMITIVES to 'false' to allow)",
-                        handledType().toString());
-            }
-            return _nullValue;
+        public Object getEmptyValue(DeserializationContext ctxt) throws JsonMappingException {
+            return _emptyValue;
         }
     }
 
@@ -175,13 +183,20 @@ public class NumberDeserializers
 
         public BooleanDeserializer(Class<Boolean> cls, Boolean nvl)
         {
-            super(cls, nvl);
+            super(cls, nvl, Boolean.FALSE);
         }
-        
+
         @Override
-        public Boolean deserialize(JsonParser j, DeserializationContext ctxt) throws IOException
+        public Boolean deserialize(JsonParser p, DeserializationContext ctxt) throws IOException
         {
-            return _parseBoolean(j, ctxt);
+            JsonToken t = p.getCurrentToken();
+            if (t == JsonToken.VALUE_TRUE) {
+                return Boolean.TRUE;
+            }
+            if (t == JsonToken.VALUE_FALSE) {
+                return Boolean.FALSE;
+            }
+            return _parseBoolean(p, ctxt);
         }
 
         // Since we can never have type info ("natural type"; String, Boolean, Integer, Double):
@@ -191,7 +206,60 @@ public class NumberDeserializers
                 TypeDeserializer typeDeserializer)
             throws IOException
         {
+            JsonToken t = p.getCurrentToken();
+            if (t == JsonToken.VALUE_TRUE) {
+                return Boolean.TRUE;
+            }
+            if (t == JsonToken.VALUE_FALSE) {
+                return Boolean.FALSE;
+            }
             return _parseBoolean(p, ctxt);
+        }
+
+        protected final Boolean _parseBoolean(JsonParser p, DeserializationContext ctxt)
+            throws IOException
+        {
+            JsonToken t = p.getCurrentToken();
+            if (t == JsonToken.VALUE_NULL) {
+                return (Boolean) _coerceNullToken(ctxt, _primitive);
+            }
+            if (t == JsonToken.START_ARRAY) { // unwrapping?
+                return _deserializeFromArray(p, ctxt);
+            }
+            // should accept ints too, (0 == false, otherwise true)
+            if (t == JsonToken.VALUE_NUMBER_INT) {
+                return Boolean.valueOf(_parseBooleanFromInt(p, ctxt));
+            }
+            // And finally, let's allow Strings to be converted too
+            if (t == JsonToken.VALUE_STRING) {
+                String text = p.getText().trim();
+                // [databind#422]: Allow aliases
+                if ("true".equals(text) || "True".equals(text)) {
+                    _verifyStringForScalarCoercion(ctxt, text);
+                    return Boolean.TRUE;
+                }
+                if ("false".equals(text) || "False".equals(text)) {
+                    _verifyStringForScalarCoercion(ctxt, text);
+                    return Boolean.FALSE;
+                }
+                if (text.length() == 0) {
+                    return (Boolean) _coerceEmptyString(ctxt, _primitive);
+                }
+                if (_hasTextualNull(text)) {
+                    return (Boolean) _coerceTextualNull(ctxt, _primitive);
+                }
+                return (Boolean) ctxt.handleWeirdStringValue(_valueClass, text,
+                        "only \"true\" or \"false\" recognized");
+            }
+            // usually caller should have handled but:
+            if (t == JsonToken.VALUE_TRUE) {
+                return Boolean.TRUE;
+            }
+            if (t == JsonToken.VALUE_FALSE) {
+                return Boolean.FALSE;
+            }
+            // Otherwise, no can do:
+            return (Boolean) ctxt.handleUnexpectedToken(_valueClass, p);
         }
     }
 
@@ -206,13 +274,64 @@ public class NumberDeserializers
         
         public ByteDeserializer(Class<Byte> cls, Byte nvl)
         {
-            super(cls, nvl);
+            super(cls, nvl, (byte) 0);
         }
 
         @Override
         public Byte deserialize(JsonParser p, DeserializationContext ctxt) throws IOException
         {
+            if (p.hasToken(JsonToken.VALUE_NUMBER_INT)) {
+                return p.getByteValue();
+            }
             return _parseByte(p, ctxt);
+        }
+
+        protected Byte _parseByte(JsonParser p, DeserializationContext ctxt) throws IOException
+        {
+            JsonToken t = p.getCurrentToken();
+            if (t == JsonToken.VALUE_STRING) { // let's do implicit re-parse
+                String text = p.getText().trim();
+                if (_hasTextualNull(text)) {
+                    return (Byte) _coerceTextualNull(ctxt, _primitive);
+                }
+                int len = text.length();
+                if (len == 0) {
+                    return (Byte) _coerceEmptyString(ctxt, _primitive);
+                }
+                _verifyStringForScalarCoercion(ctxt, text);
+                int value;
+                try {
+                    value = NumberInput.parseInt(text);
+                } catch (IllegalArgumentException iae) {
+                    return (Byte) ctxt.handleWeirdStringValue(_valueClass, text,
+                            "not a valid Byte value");
+                }
+                // So far so good: but does it fit?
+                // as per [JACKSON-804], allow range up to 255, inclusive
+                if (_byteOverflow(value)) {
+                    return (Byte) ctxt.handleWeirdStringValue(_valueClass, text,
+                            "overflow, value cannot be represented as 8-bit value");
+                    // fall-through for deferred fails
+                }
+                return Byte.valueOf((byte) value);
+            }
+            if (t == JsonToken.VALUE_NUMBER_FLOAT) {
+                if (!ctxt.isEnabled(DeserializationFeature.ACCEPT_FLOAT_AS_INT)) {
+                    _failDoubleToIntCoercion(p, ctxt, "Byte");
+                }
+                return p.getByteValue();
+            }
+            if (t == JsonToken.VALUE_NULL) {
+                return (Byte) _coerceNullToken(ctxt, _primitive);
+            }
+            // [databind#381]
+            if (t == JsonToken.START_ARRAY) {
+                return _deserializeFromArray(p, ctxt);
+            }
+            if (t == JsonToken.VALUE_NUMBER_INT) { // shouldn't usually be called with it but
+                return p.getByteValue();
+            }
+            return (Byte) ctxt.handleUnexpectedToken(_valueClass, p);
         }
     }
 
@@ -227,14 +346,59 @@ public class NumberDeserializers
         
         public ShortDeserializer(Class<Short> cls, Short nvl)
         {
-            super(cls, nvl);
+            super(cls, nvl, (short)0);
         }
 
         @Override
-        public Short deserialize(JsonParser jp, DeserializationContext ctxt)
+        public Short deserialize(JsonParser p, DeserializationContext ctxt)
             throws IOException
         {
-            return _parseShort(jp, ctxt);
+            return _parseShort(p, ctxt);
+        }
+
+        protected Short _parseShort(JsonParser p, DeserializationContext ctxt) throws IOException
+        {
+            JsonToken t = p.getCurrentToken();
+            if (t == JsonToken.VALUE_NUMBER_INT) {
+                return p.getShortValue();
+            }
+            if (t == JsonToken.VALUE_STRING) { // let's do implicit re-parse
+                String text = p.getText().trim();
+                int len = text.length();
+                if (len == 0) {
+                    return (Short) _coerceEmptyString(ctxt, _primitive);
+                }
+                if (_hasTextualNull(text)) {
+                    return (Short) _coerceTextualNull(ctxt, _primitive);
+                }
+                _verifyStringForScalarCoercion(ctxt, text);
+                int value;
+                try {
+                    value = NumberInput.parseInt(text);
+                } catch (IllegalArgumentException iae) {
+                    return (Short) ctxt.handleWeirdStringValue(_valueClass, text,
+                            "not a valid Short value");
+                }
+                // So far so good: but does it fit?
+                if (_shortOverflow(value)) {
+                    return (Short) ctxt.handleWeirdStringValue(_valueClass, text,
+                            "overflow, value cannot be represented as 16-bit value");
+                }
+                return Short.valueOf((short) value);
+            }
+            if (t == JsonToken.VALUE_NUMBER_FLOAT) {
+                if (!ctxt.isEnabled(DeserializationFeature.ACCEPT_FLOAT_AS_INT)) {
+                    _failDoubleToIntCoercion(p, ctxt, "Short");
+                }
+                return p.getShortValue();
+            }
+            if (t == JsonToken.VALUE_NULL) {
+                return (Short) _coerceNullToken(ctxt, _primitive);
+            }
+            if (t == JsonToken.START_ARRAY) {
+                return _deserializeFromArray(p, ctxt);
+            }
+            return (Short) ctxt.handleUnexpectedToken(_valueClass, p);
         }
     }
 
@@ -249,7 +413,7 @@ public class NumberDeserializers
         
         public CharacterDeserializer(Class<Character> cls, Character nvl)
         {
-            super(cls, nvl);
+            super(cls, nvl, '\0');
         }
 
         @Override
@@ -258,6 +422,7 @@ public class NumberDeserializers
         {
             switch (p.getCurrentTokenId()) {
             case JsonTokenId.ID_NUMBER_INT: // ok iff ascii value
+                _verifyNumberForScalarCoercion(ctxt, p);
                 int value = p.getIntValue();
                 if (value >= 0 && value <= 0xFFFF) {
                     return Character.valueOf((char) value);
@@ -271,22 +436,16 @@ public class NumberDeserializers
                 }
                 // actually, empty should become null?
                 if (text.length() == 0) {
-                    return (Character) getEmptyValue(ctxt);
-                }               
-                break;
-            case JsonTokenId.ID_START_ARRAY:
-                if (ctxt.isEnabled(DeserializationFeature.UNWRAP_SINGLE_VALUE_ARRAYS)) {
-                    p.nextToken();
-                    final Character C = deserialize(p, ctxt);
-                    if (p.nextToken() != JsonToken.END_ARRAY) {
-                        throw ctxt.wrongTokenException(p, JsonToken.END_ARRAY, 
-                                "Attempted to unwrap single value array for single '" + _valueClass.getName() + "' value but there was more than a single value in the array"
-                                );
-                    }
-                    return C;
+                    return (Character) _coerceEmptyString(ctxt, _primitive);
                 }
+                break;
+            case JsonTokenId.ID_NULL:
+                return (Character) _coerceNullToken(ctxt, _primitive);
+            case JsonTokenId.ID_START_ARRAY:
+                return _deserializeFromArray(p, ctxt);
+            default:
             }
-            throw ctxt.mappingException(_valueClass, p.getCurrentToken());
+            return (Character) ctxt.handleUnexpectedToken(_valueClass, p);
         }
     }
 
@@ -296,11 +455,11 @@ public class NumberDeserializers
     {
         private static final long serialVersionUID = 1L;
 
-        final static IntegerDeserializer primitiveInstance = new IntegerDeserializer(Integer.TYPE, Integer.valueOf(0));
+        final static IntegerDeserializer primitiveInstance = new IntegerDeserializer(Integer.TYPE, 0);
         final static IntegerDeserializer wrapperInstance = new IntegerDeserializer(Integer.class, null);
         
         public IntegerDeserializer(Class<Integer> cls, Integer nvl) {
-            super(cls, nvl);
+            super(cls, nvl, 0);
         }
 
         // since 2.6, slightly faster lookups for this very common type
@@ -326,6 +485,51 @@ public class NumberDeserializers
             }
             return _parseInteger(p, ctxt);
         }
+
+        protected final Integer _parseInteger(JsonParser p, DeserializationContext ctxt) throws IOException
+        {
+            switch (p.getCurrentTokenId()) {
+            // NOTE: caller assumed to usually check VALUE_NUMBER_INT in fast path
+            case JsonTokenId.ID_NUMBER_INT:
+                return Integer.valueOf(p.getIntValue());
+            case JsonTokenId.ID_NUMBER_FLOAT: // coercing may work too
+                if (!ctxt.isEnabled(DeserializationFeature.ACCEPT_FLOAT_AS_INT)) {
+                    _failDoubleToIntCoercion(p, ctxt, "Integer");
+                }
+                return Integer.valueOf(p.getValueAsInt());
+            case JsonTokenId.ID_STRING: // let's do implicit re-parse
+                String text = p.getText().trim();
+                int len = text.length();
+                if (len == 0) {
+                    return (Integer) _coerceEmptyString(ctxt, _primitive);
+                }
+                if (_hasTextualNull(text)) {
+                    return (Integer) _coerceTextualNull(ctxt, _primitive);
+                }
+                _verifyStringForScalarCoercion(ctxt, text);
+                try {
+                    if (len > 9) {
+                        long l = Long.parseLong(text);
+                        if (_intOverflow(l)) {
+                            return (Integer) ctxt.handleWeirdStringValue(_valueClass, text, String.format(
+                                "Overflow: numeric value (%s) out of range of Integer (%d - %d)",
+                                text, Integer.MIN_VALUE, Integer.MAX_VALUE));
+                        }
+                        return Integer.valueOf((int) l);
+                    }
+                    return Integer.valueOf(NumberInput.parseInt(text));
+                } catch (IllegalArgumentException iae) {
+                    return (Integer) ctxt.handleWeirdStringValue(_valueClass, text,
+                            "not a valid Integer value");
+                }
+            case JsonTokenId.ID_NULL:
+                return (Integer) _coerceNullToken(ctxt, _primitive);
+            case JsonTokenId.ID_START_ARRAY:
+                return _deserializeFromArray(p, ctxt);
+            }
+            // Otherwise, no can do:
+            return (Integer) ctxt.handleUnexpectedToken(_valueClass, p);
+        }
     }
 
     @JacksonStdImpl
@@ -334,11 +538,11 @@ public class NumberDeserializers
     {
         private static final long serialVersionUID = 1L;
 
-        final static LongDeserializer primitiveInstance = new LongDeserializer(Long.TYPE, Long.valueOf(0L));
+        final static LongDeserializer primitiveInstance = new LongDeserializer(Long.TYPE, 0L);
         final static LongDeserializer wrapperInstance = new LongDeserializer(Long.class, null);
         
         public LongDeserializer(Class<Long> cls, Long nvl) {
-            super(cls, nvl);
+            super(cls, nvl, 0L);
         }
 
         // since 2.6, slightly faster lookups for this very common type
@@ -352,6 +556,42 @@ public class NumberDeserializers
             }
             return _parseLong(p, ctxt);
         }
+
+        protected final Long _parseLong(JsonParser p, DeserializationContext ctxt) throws IOException
+        {
+            switch (p.getCurrentTokenId()) {
+            // NOTE: caller assumed to usually check VALUE_NUMBER_INT in fast path
+            case JsonTokenId.ID_NUMBER_INT:
+                return p.getLongValue();
+            case JsonTokenId.ID_NUMBER_FLOAT:
+                if (!ctxt.isEnabled(DeserializationFeature.ACCEPT_FLOAT_AS_INT)) {
+                    _failDoubleToIntCoercion(p, ctxt, "Long");
+                }
+                return p.getValueAsLong();
+            case JsonTokenId.ID_STRING:
+                String text = p.getText().trim();
+                if (text.length() == 0) {
+                    return (Long) _coerceEmptyString(ctxt, _primitive);
+                }
+                if (_hasTextualNull(text)) {
+                    return (Long) _coerceTextualNull(ctxt, _primitive);
+                }
+                _verifyStringForScalarCoercion(ctxt, text);
+                // let's allow Strings to be converted too
+                try {
+                    return Long.valueOf(NumberInput.parseLong(text));
+                } catch (IllegalArgumentException iae) { }
+                return (Long) ctxt.handleWeirdStringValue(_valueClass, text,
+                        "not a valid Long value");
+                // fall-through
+            case JsonTokenId.ID_NULL:
+                return (Long) _coerceNullToken(ctxt, _primitive);
+            case JsonTokenId.ID_START_ARRAY:
+                return _deserializeFromArray(p, ctxt);
+            }
+            // Otherwise, no can do:
+            return (Long) ctxt.handleUnexpectedToken(_valueClass, p);
+        }
     }
 
     @JacksonStdImpl
@@ -364,13 +604,65 @@ public class NumberDeserializers
         final static FloatDeserializer wrapperInstance = new FloatDeserializer(Float.class, null);
         
         public FloatDeserializer(Class<Float> cls, Float nvl) {
-            super(cls, nvl);
+            super(cls, nvl, 0.f);
         }
 
         @Override
         public Float deserialize(JsonParser p, DeserializationContext ctxt) throws IOException
         {
             return _parseFloat(p, ctxt);
+        }
+
+        protected final Float _parseFloat(JsonParser p, DeserializationContext ctxt)
+            throws IOException
+        {
+            // We accept couple of different types; obvious ones first:
+            JsonToken t = p.getCurrentToken();
+            
+            if (t == JsonToken.VALUE_NUMBER_FLOAT || t == JsonToken.VALUE_NUMBER_INT) { // coercing should work too
+                return p.getFloatValue();
+            }
+            // And finally, let's allow Strings to be converted too
+            if (t == JsonToken.VALUE_STRING) {
+                String text = p.getText().trim();
+                if ((text.length() == 0)) {
+                    return (Float) _coerceEmptyString(ctxt, _primitive);
+                }
+                if (_hasTextualNull(text)) {
+                    return (Float) _coerceTextualNull(ctxt, _primitive);
+                }
+                switch (text.charAt(0)) {
+                case 'I':
+                    if (_isPosInf(text)) {
+                        return Float.POSITIVE_INFINITY;
+                    }
+                    break;
+                case 'N':
+                    if (_isNaN(text)) {
+                        return Float.NaN;
+                    }
+                    break;
+                case '-':
+                    if (_isNegInf(text)) {
+                        return Float.NEGATIVE_INFINITY;
+                    }
+                    break;
+                }
+                _verifyStringForScalarCoercion(ctxt, text);
+                try {
+                    return Float.parseFloat(text);
+                } catch (IllegalArgumentException iae) { }
+                return (Float) ctxt.handleWeirdStringValue(_valueClass, text,
+                        "not a valid Float value");
+            }
+            if (t == JsonToken.VALUE_NULL) {
+                return (Float) _coerceNullToken(ctxt, _primitive);
+            }
+            if (t == JsonToken.START_ARRAY) {
+                return _deserializeFromArray(p, ctxt);
+            }
+            // Otherwise, no can do:
+            return (Float) ctxt.handleUnexpectedToken(_valueClass, p);
         }
     }
 
@@ -384,21 +676,69 @@ public class NumberDeserializers
         final static DoubleDeserializer wrapperInstance = new DoubleDeserializer(Double.class, null);
         
         public DoubleDeserializer(Class<Double> cls, Double nvl) {
-            super(cls, nvl);
+            super(cls, nvl, 0.d);
         }
 
         @Override
-        public Double deserialize(JsonParser jp, DeserializationContext ctxt) throws IOException {
-            return _parseDouble(jp, ctxt);
+        public Double deserialize(JsonParser p, DeserializationContext ctxt) throws IOException {
+            return _parseDouble(p, ctxt);
         }
 
         // Since we can never have type info ("natural type"; String, Boolean, Integer, Double):
         // (is it an error to even call this version?)
         @Override
-        public Double deserializeWithType(JsonParser jp, DeserializationContext ctxt,
+        public Double deserializeWithType(JsonParser p, DeserializationContext ctxt,
                 TypeDeserializer typeDeserializer) throws IOException
         {
-            return _parseDouble(jp, ctxt);
+            return _parseDouble(p, ctxt);
+        }
+
+        protected final Double _parseDouble(JsonParser p, DeserializationContext ctxt) throws IOException
+        {
+            JsonToken t = p.getCurrentToken();
+            if (t == JsonToken.VALUE_NUMBER_INT || t == JsonToken.VALUE_NUMBER_FLOAT) { // coercing should work too
+                return p.getDoubleValue();
+            }
+            if (t == JsonToken.VALUE_STRING) {
+                String text = p.getText().trim();
+                if ((text.length() == 0)) {
+                    return (Double) _coerceEmptyString(ctxt, _primitive);
+                }
+                if (_hasTextualNull(text)) {
+                    return (Double) _coerceTextualNull(ctxt, _primitive);
+                }
+                switch (text.charAt(0)) {
+                case 'I':
+                    if (_isPosInf(text)) {
+                        return Double.POSITIVE_INFINITY;
+                    }
+                    break;
+                case 'N':
+                    if (_isNaN(text)) {
+                        return Double.NaN;
+                    }
+                    break;
+                case '-':
+                    if (_isNegInf(text)) {
+                        return Double.NEGATIVE_INFINITY;
+                    }
+                    break;
+                }
+                _verifyStringForScalarCoercion(ctxt, text);
+                try {
+                    return parseDouble(text);
+                } catch (IllegalArgumentException iae) { }
+                return (Double) ctxt.handleWeirdStringValue(_valueClass, text,
+                        "not a valid Double value");
+            }
+            if (t == JsonToken.VALUE_NULL) {
+                return (Double) _coerceNullToken(ctxt, _primitive);
+            }
+            if (t == JsonToken.START_ARRAY) {
+                return _deserializeFromArray(p, ctxt);
+            }
+            // Otherwise, no can do:
+            return (Double) ctxt.handleUnexpectedToken(_valueClass, p);
         }
     }
 
@@ -435,19 +775,24 @@ public class NumberDeserializers
 
             case JsonTokenId.ID_NUMBER_FLOAT:
                 if (ctxt.isEnabled(DeserializationFeature.USE_BIG_DECIMAL_FOR_FLOATS)) {
-                    return p.getDecimalValue();
+                    // 10-Mar-2017, tatu: NaN and BigDecimal won't mix...
+                    if (!p.isNaN()) {
+                        return p.getDecimalValue();
+                    }
                 }
-                return Double.valueOf(p.getDoubleValue());
+                return p.getNumberValue();
 
             case JsonTokenId.ID_STRING:
                 /* Textual values are more difficult... not parsing itself, but figuring
                  * out 'minimal' type to use 
                  */
                 String text = p.getText().trim();
-                if (text.length() == 0) {
-                    return getEmptyValue(ctxt);
+                if ((text.length() == 0)) {
+                    // note: no need to call `coerce` as this is never primitive
+                    return getNullValue(ctxt);
                 }
                 if (_hasTextualNull(text)) {
+                    // note: no need to call `coerce` as this is never primitive
                     return getNullValue(ctxt);
                 }
                 if (_isPosInf(text)) {
@@ -459,12 +804,13 @@ public class NumberDeserializers
                 if (_isNaN(text)) {
                     return Double.NaN;
                 }
+                _verifyStringForScalarCoercion(ctxt, text);
                 try {
                     if (!_isIntNumber(text)) {
                         if (ctxt.isEnabled(DeserializationFeature.USE_BIG_DECIMAL_FOR_FLOATS)) {
                             return new BigDecimal(text);
                         }
-                        return new Double(text);
+                        return Double.valueOf(text);
                     }
                     if (ctxt.isEnabled(DeserializationFeature.USE_BIG_INTEGER_FOR_INTS)) {
                         return new BigInteger(text);
@@ -477,23 +823,14 @@ public class NumberDeserializers
                     }
                     return Long.valueOf(value);
                 } catch (IllegalArgumentException iae) {
-                    throw ctxt.weirdStringException(text, _valueClass, "not a valid number");
+                    return ctxt.handleWeirdStringValue(_valueClass, text,
+                            "not a valid number");
                 }
             case JsonTokenId.ID_START_ARRAY:
-                if (ctxt.isEnabled(DeserializationFeature.UNWRAP_SINGLE_VALUE_ARRAYS)) {
-                    p.nextToken();
-                    final Object value = deserialize(p, ctxt);
-                    if (p.nextToken() != JsonToken.END_ARRAY) {
-                        throw ctxt.wrongTokenException(p, JsonToken.END_ARRAY, 
-                                "Attempted to unwrap single value array for single '" + _valueClass.getName() + "' value but there was more than a single value in the array"
-                                );
-                    }
-                    return value;
-                }
-                break;
+                return _deserializeFromArray(p, ctxt);
             }
             // Otherwise, no can do:
-            throw ctxt.mappingException(_valueClass, p.getCurrentToken());
+            return ctxt.handleUnexpectedToken(_valueClass, p);
         }
 
         /**
@@ -503,18 +840,18 @@ public class NumberDeserializers
          * calling type deserializer.
          */
         @Override
-        public Object deserializeWithType(JsonParser jp, DeserializationContext ctxt,
-                                          TypeDeserializer typeDeserializer)
+        public Object deserializeWithType(JsonParser p, DeserializationContext ctxt,
+                TypeDeserializer typeDeserializer)
             throws IOException
         {
-            switch (jp.getCurrentTokenId()) {
+            switch (p.getCurrentTokenId()) {
             case JsonTokenId.ID_NUMBER_INT:
             case JsonTokenId.ID_NUMBER_FLOAT:
             case JsonTokenId.ID_STRING:
-                // can not point to type information: hence must be non-typed (int/double)
-                return deserialize(jp, ctxt);
+                // cannot point to type information: hence must be non-typed (int/double)
+                return deserialize(p, ctxt);
             }
-            return typeDeserializer.deserializeTypedFromScalar(jp, ctxt);
+            return typeDeserializer.deserializeTypedFromScalar(p, ctxt);
         }
     }
 
@@ -538,6 +875,11 @@ public class NumberDeserializers
 
         public BigIntegerDeserializer() { super(BigInteger.class); }
 
+        @Override
+        public Object getEmptyValue(DeserializationContext ctxt) {
+            return BigInteger.ZERO;
+        }
+
         @SuppressWarnings("incomplete-switch")
         @Override
         public BigInteger deserialize(JsonParser p, DeserializationContext ctxt) throws IOException
@@ -557,30 +899,23 @@ public class NumberDeserializers
                 }
                 return p.getDecimalValue().toBigInteger();
             case JsonTokenId.ID_START_ARRAY:
-                if (ctxt.isEnabled(DeserializationFeature.UNWRAP_SINGLE_VALUE_ARRAYS)) {
-                    p.nextToken();
-                    final BigInteger value = deserialize(p, ctxt);
-                    if (p.nextToken() != JsonToken.END_ARRAY) {
-                        throw ctxt.wrongTokenException(p, JsonToken.END_ARRAY,
-                            "Attempted to unwrap single value array for single 'BigInteger' value but there was more than a single value in the array"
-                        );
-                    }
-                    return value;
-                }
-                break;
+                return _deserializeFromArray(p, ctxt);
             case JsonTokenId.ID_STRING: // let's do implicit re-parse
                 String text = p.getText().trim();
-                if (text.length() == 0) {
-                    return null;
+                // note: no need to call `coerce` as this is never primitive
+                if (_isEmptyOrTextualNull(text)) {
+                    _verifyNullForScalarCoercion(ctxt, text);
+                    return getNullValue(ctxt);
                 }
+                _verifyStringForScalarCoercion(ctxt, text);
                 try {
                     return new BigInteger(text);
-                } catch (IllegalArgumentException iae) {
-                    throw ctxt.weirdStringException(text, _valueClass, "not a valid representation");
-                }
+                } catch (IllegalArgumentException iae) { }
+                return (BigInteger) ctxt.handleWeirdStringValue(_valueClass, text,
+                        "not a valid representation");
             }
             // String is ok too, can easily convert; otherwise, no can do:
-            throw ctxt.mappingException(_valueClass, p.getCurrentToken());
+            return (BigInteger) ctxt.handleUnexpectedToken(_valueClass, p);
         }
     }
     
@@ -594,6 +929,11 @@ public class NumberDeserializers
         public BigDecimalDeserializer() { super(BigDecimal.class); }
 
         @Override
+        public Object getEmptyValue(DeserializationContext ctxt) {
+            return BigDecimal.ZERO;
+        }
+        
+        @Override
         public BigDecimal deserialize(JsonParser p, DeserializationContext ctxt)
             throws IOException
         {
@@ -603,29 +943,22 @@ public class NumberDeserializers
                 return p.getDecimalValue();
             case JsonTokenId.ID_STRING:
                 String text = p.getText().trim();
-                if (text.length() == 0) {
-                    return null;
+                // note: no need to call `coerce` as this is never primitive
+                if (_isEmptyOrTextualNull(text)) {
+                    _verifyNullForScalarCoercion(ctxt, text);
+                    return getNullValue(ctxt);
                 }
+                _verifyStringForScalarCoercion(ctxt, text);
                 try {
                     return new BigDecimal(text);
-                } catch (IllegalArgumentException iae) {
-                    throw ctxt.weirdStringException(text, _valueClass, "not a valid representation");
-                }
+                } catch (IllegalArgumentException iae) { }
+                return (BigDecimal) ctxt.handleWeirdStringValue(_valueClass, text,
+                        "not a valid representation");
             case JsonTokenId.ID_START_ARRAY:
-                if (ctxt.isEnabled(DeserializationFeature.UNWRAP_SINGLE_VALUE_ARRAYS)) {
-                    p.nextToken();
-                    final BigDecimal value = deserialize(p, ctxt);
-                    if (p.nextToken() != JsonToken.END_ARRAY) {
-                        throw ctxt.wrongTokenException(p, JsonToken.END_ARRAY,
-                            "Attempted to unwrap single value array for single 'BigDecimal' value but there was more than a single value in the array"
-                        );
-                    }
-                    return value;
-                }
-                break;
+                return _deserializeFromArray(p, ctxt);
             }
             // Otherwise, no can do:
-            throw ctxt.mappingException(_valueClass, p.getCurrentToken());
+            return (BigDecimal) ctxt.handleUnexpectedToken(_valueClass, p);
         }
     }
 }
